--- a/package.json
+++ b/package.json
@@ -1,27 +1,48 @@
 {
-  "name": "html_practice",
+  "name": "test",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "ls",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
-    "@reduxjs/toolkit": "^1.8.2",
+    "@reduxjs/toolkit": "^1.8.5",
+    "antd": "^4.22.7",
     "babel-loader": "^8.2.5",
     "core-js": "^3.23.2",
     "css-loader": "^6.7.1",
     "highcharts": "^10.1.0",
     "highcharts-react-official": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
-    "nanoid": "^4.0.0",
-    "pubsub-js": "^1.9.4",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-redux": "^8.0.2",
+    "redux-logger": "^3.0.6",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "devDependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@reduxjs/toolkit": "^1.8.5",
+    "antd": "^4.22.7",
+    "babel-loader": "^8.2.5",
+    "core-js": "^3.23.2",
+    "css-loader": "^6.7.1",
+    "highcharts": "^10.1.0",
+    "highcharts-react-official": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^8.0.2",
