--- a/package.json
+++ b/package.json
@@ -1,55 +1,46 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack server",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "ls",
-  "license": "ISC",
+  "name": "citi",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@babel/core": "^7.18.5",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-react": "^7.17.12",
     "@reduxjs/toolkit": "^1.8.5",
-    "antd": "^4.22.7",
-    "babel-loader": "^8.2.5",
-    "core-js": "^3.23.2",
-    "css-loader": "^6.7.1",
-    "highcharts": "^10.1.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.22.8",
+    "highcharts": "^10.2.0",
     "highcharts-react-official": "^3.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@babel/core": "^7.18.5",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-react": "^7.17.12",
-    "@reduxjs/toolkit": "^1.8.5",
-    "antd": "^4.22.7",
-    "babel-loader": "^8.2.5",
-    "core-js": "^3.23.2",
-    "css-loader": "^6.7.1",
-    "highcharts": "^10.1.0",
-    "highcharts-react-official": "^3.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-redux": "^8.0.2",
-    "redux-logger": "^3.0.6",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
